# penta_sample_fastapi_vue

./: .gitignore  README.rst  pyproject.toml
front/: package-lock.json  package.json
front/src/: App.vue
front/src/components/Area/: AreaFooter.vue  AreaHeader.vue  AreaMain.vue
front/src/components/Parts/: PostBackend.vue
penta_sample_fastapi_vue/: main.py
penta_sample_fastapi_vue/templates/: index.html
penta_sample_fastapi_vue/templates/static/: index.66df8b22.css  index.c9a0e7a1.js
tests/: test_penta_sample_fastapi_vue.py
